Fixed spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 
 * {
     box-sizing: border-box;
-    margin: 0%;
-    padding: 0%;
-    font-family: "Arial";
+    margin: 0;
+    padding: 0;
+    font-family: "Arial", sans-serif;
 }
 
 /* RESET END */
@@ -60,10 +60,8 @@ header div {
 .first-section {
     padding: 15px 50px;
     background-color: white;
-    margin: auto;
     border-radius: 5px;
     vertical-align: middle;
-    margin-bottom: 2px;
 }
 
 .second-section {
